feat: enhanced java basics